--- a/styles.css
+++ b/styles.css
@@ -1,71 +1,139 @@
 
+
 body {
 
     font-size: 1em;
     line-height: 1.5;
 margin: 0;
 text-align: justify;
-background-color:#8A508A
-}
+background-color:#492e49
 
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color:#120012;
-}
 
-li {
-  float: left;
 }
-
-li a {
-  display: block;
+.title {
+  font-size: calc(1rem + 2vw);
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-weight: var(--fw-title);
   color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
+  text-shadow: 3px 5px 10px rgba(0,0,0, .2);
+  clip-path: circle(0 0, 100% 0%, 100% 60%, 0% 100%);
 }
 
-li a:hover:not(.active) {
-  background-color: #111;
-}
-.active{
-    background-color:#120012;
-}
-
-#newsPic{
-  float: left;
-  border: none;
-   border-width: 0;
-  border-style: none;
-  border-color: transparent;
-   box-shadow: 3px 3px 2px rgba(0, 0, 0, 0.5);
-  border-radius: 50px;
-  margin-right: 10px;
-  margin-top: 20px;
+h2{
+  background-color:rgb(83, 49, 78) ;
+  border-radius: 5px;
+  font-size: calc(1rem + 1vw);
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-weight: var(--fw-title);
+  color: white;
+  text-shadow: 3px 5px 10px rgba(0,0,0, .2);
+ 
  
   
 }
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.main-nav {
+	margin-top: 5px;
+
+}
+
+.main-nav a {
+	padding: 10px 15px;
+	text-transform: uppercase;
+	text-align: center;
+	display: block;
+}
+
+.main-nav a {
+	color: #34495e;
+	font-size: .99em;
+}
+
+.main-nav a:hover {
+	color: #f309c0;
+}
+
+
+
+.header {
+	padding-top: .5em;
+	padding-bottom: .5em;
+	border: 1px solid #a2a2a2;
+	background-color: #f4f4f4;
+	-webkit-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
+	box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius:0px;
+}
+
+
+/* ================================= 
+  Media Queries
+==================================== */
+
+
+
+
+@media (min-width: 769px) {
+	.header,
+	.main-nav {
+		display: flex;
+	}
+	.header {
+		flex-direction: column;
+		align-items: center;
+  
+    	.header{
+		width: 80%;
+		margin: 0 auto;
+		max-width: 1150px;
+	}
+	}
+
+}
+
+@media (min-width: 1025px) {
+	.header {
+		flex-direction: row;
+		justify-content: space-between;
+	}
+
+}
+
+
+
+
 .clear-left {
     clear: left;
-    padding-bottom: 50pxpx;
+    padding-bottom: 50px;
+    
 }
 #quote{
-  width: 80%; /* set the width of the element */
+   /* set the width of the element */
   display: block; /* make the element a block element */
   margin: 0 auto;
+  color: white;
+  max-width: 1150px;
 
 }
 #quotepic{
-      padding-left: 10px;
       border-radius:10px;
        border: none;
    border-width: 0;
   border-style: none;
   border-color: transparent;
    box-shadow: 3px 3px 2px rgba(0, 0, 0, 0.5);
+   float:left;
+   width: 49%;
+  height: min-content;
+ margin-right: 1rem;
 }
 *, *::before, *::after {
     box-sizing: border-box;
@@ -74,20 +142,28 @@ li a:hover:not(.active) {
        text-align: justify;
 }
 .content {
-  width: 80%; /* set the width of the element */
+  /* set the width of the element */
   display: block; /* make the element a block element */
   margin: 0 auto;
+  color: white;
+  width: min(80%, 80rem);
    /* center the element horizontally */
 }
+#contact{
+  width: min(80%, 80rem);
+  display: block; /* make the element a block element */
+  margin: 0 auto;
+  color: white;
+  width: min(80%, 80rem);
+   
+}
+ 
 .small-text{
     font-size: 0.8em;
+    color: rgb(170, 65, 65);
 }
-.float-left {
-    float: left;
-}
-.float-right {
-    float: right;
-}
+
+
 .fa-twitter {
   background: #55ACEE;
   color: white;
@@ -99,6 +175,21 @@ li a:hover:not(.active) {
   footer {
   text-align: center;
   padding: 3px;
-  background-color: #120012;
+  background-color: #fcfafc;
+  color: rgb(10, 9, 9);
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+.columns {
+  margin: 3rem auto;
+  width: min(100%, 80rem);
+  display: grid;
+  grid-auto-flow: row;
+  gap: 1.5em;
   color: white;
 }
+
+@media (min-width: 55em) {
+  .columns {
+    grid-auto-flow: column;
+  }
+  
